--- a/Working with Props/src/index.css
+++ b/Working with Props/src/index.css
@@ -24,8 +24,6 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -70,7 +68,7 @@ button:focus-visible {
 /* Стили для контейнера карточек */
 .card-container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(380px, 1fr));
   gap: 20px;
   padding: 20px;
 }
@@ -118,6 +116,10 @@ button:focus-visible {
 
 .card-tags {
   margin-top: 10px;
+  display: flex;
+  gap: 6px;
+  padding: 0;
+  list-style: none;
 }
 
 .card-tag {
